--- a/index.html
+++ b/index.html
@@ -86,7 +86,22 @@
                 </div>
             </section>
         </section>
-        <section></section>
+        <section class="main-product-detail">
+            <!-- icono de patata -->
+            <span></span>
+            <div>
+                <h2>Creamos un producto sin comparación.</h2>
+                <p>Confiable y diseñado para su uso diario.</p>
+            </div>
+            <div class="product-cards--container">
+                <article class="product-detail--card">
+                    <span class="clock"></span>
+                    <p class="product--card-title">Tiempo real</p>
+                    <p class="product--card-body">Nuestro API toma información minuto a minuto sobre las tasas que más
+                        determinan el comportamiento.</p>
+                </article>
+            </div>
+        </section>
         <section></section>
         <section></section>
     </main>
