--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         </section>
         <section class="main-product-detail">
             <!-- icono de patata -->
-            <span></span>
-            <div>
+            <span class="proudct-detail--batata-logo"></span>
+            <div class="product-detail--title">
                 <h2>Creamos un producto sin comparación.</h2>
                 <p>Confiable y diseñado para su uso diario.</p>
             </div>
