se creo semantica en las cartas

--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
             </div>
             <section class="plans-container--slider">
                 <article class="plans-container--card">
-                    <p>Recomendado</p>
-                    <div class="">
-                        <h3> <span>$</span> Pago Anual</h3>
-                        <p>99</p>
-                        <p>*Ahorras $129 comparado al plan mensual.</p>
-                        <button>Escoger este <span>i</span> </button>
+                    <p class="recommended">Recomendado</p>
+                    <div class="plan--info-container">
+                        <h3 class="plan-card--title"> <span>$</span> Pago Anual</h3>
+                        <p class="plan-card--price">99</p>
+                        <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoger este <span>i</span> </button>
                     </div>
                 </article>
             </section>
