--- a/index.html
+++ b/index.html
@@ -129,13 +129,23 @@
                 <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
             </div>
             <section class="plans-container--slider">
-                <article class="plans-container--card">
-                    <p class="recommended">Recomendado</p>
+                <article class="plans-container--card plan-recommended">
+                    <p class="saving recommended">Recomendado</p>
                     <div class="plan--info-container">
-                        <h3 class="plan-card--title"> <span>$</span> Pago Anual</h3>
-                        <p class="plan-card--price">99</p>
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card--price"> <span>$</span> 99</p>
                         <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
-                        <button class="plan-card--ca">Escoger este <span>i</span> </button>
+                        <button class="plan-card--ca">Escoger este <span></span> </button>
+                    </div>
+                </article>
+
+                <article class="plans-container--card plan-annual">
+                    <p class="saving annual">Plan anual</p>
+                    <div class="plan--info-container">
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card--price"> <span>$</span> 99</p>
+                        <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoger este <span></span> </button>
                     </div>
                 </article>
             </section>
