--- a/index.html
+++ b/index.html
@@ -129,16 +129,24 @@
                 <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
             </div>
             <section class="plans-container--slider">
-                <article class="plans-container--card plan-recommended">
-                    <p class="saving recommended">Recomendado</p>
+                <article class="plans-container--card plan-basic">
+                    <p class="saving basic">Plan basico</p>
                     <div class="plan--info-container">
-                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <h3 class="plan-card--title">Pago mensual</h3>
                         <p class="plan-card--price"> <span>$</span> 99</p>
                         <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
                         <button class="plan-card--ca">Escoger este <span></span> </button>
                     </div>
                 </article>
-
+                <article class="plans-container--card plan-recommended">
+                    <p class="saving recommended">Recomendado</p>
+                    <div class="plan--info-container">
+                        <h3 class="plan-card--title">Pago trimestral</h3>
+                        <p class="plan-card--price"> <span>$</span> 99</p>
+                        <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoger este <span></span> </button>
+                    </div>
+                </article>
                 <article class="plans-container--card plan-annual">
                     <p class="saving annual">Plan anual</p>
                     <div class="plan--info-container">
